--- a/SmartShopper/SmartShopperDomain/SmartShopperDomain.csproj
+++ b/SmartShopper/SmartShopperDomain/SmartShopperDomain.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,11 +43,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Entities\Category.cs" />
+    <Compile Include="Entities\ListItem.cs" />
+    <Compile Include="Entities\ShippingList.cs" />
+    <Compile Include="Entities\SuggestedList.cs" />
+    <Compile Include="Entities\SuggestedListItem.cs" />
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValueObjects\ListName.cs" />
+    <Compile Include="ValueObjects\ProductName.cs" />
+    <Compile Include="ValueObjects\Quantity.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="ValueObjects\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
