--- a/SmartShopper/SmartShopperDomain/SmartShopperDomain.csproj
+++ b/SmartShopper/SmartShopperDomain/SmartShopperDomain.csproj
@@ -43,12 +43,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="Entities\Category.cs" />
+    <Compile Include="Entities\Product.cs" />
+    <Compile Include="ValueObjects\Category.cs" />
     <Compile Include="Entities\ListItem.cs" />
-    <Compile Include="Entities\ShippingList.cs" />
-    <Compile Include="Entities\SuggestedList.cs" />
-    <Compile Include="Entities\SuggestedListItem.cs" />
+    <Compile Include="Entities\ShoppingList.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="Enums\ProductCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValueObjects\ListName.cs" />
     <Compile Include="ValueObjects\ProductName.cs" />
